--- a/src/components/styles/appGlobal.css
+++ b/src/components/styles/appGlobal.css
@@ -174,6 +174,50 @@
   .content p {
     margin-bottom:  30px;
   }
+
+
+  /* Pour les appareils de petite taille comme les smartphones */
+@media (max-width: 768px) {
+    .header {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .header .logo {
+      margin-bottom: 10px;
+    }
+  
+    .sidebar {
+      width: 100%;
+      border-radius: 0;
+    }
+  
+    .content-container {
+      margin-left: 0;
+    }
+  
+    .footer-container {
+      flex-direction: column;
+      align-items: center;
+      margin-left: 0;
+    }
+  }
+  
+  /* Pour les tablettes et les ordinateurs de bureau */
+  @media (min-width: 768px) {
+    .sidebar {
+      width: 200px;
+    }
+  
+    .content-container {
+      margin-left: 30px;
+    }
+  
+    .footer-container {
+      margin-left: 280px;
+    }
+  }
+  
   
   
   
